svjis/articles/static/css/styles.css
/* ... */
.box1_content {
  background-color: #ffffff;
  padding: 10px 0px;
  margin: 0px;
  border-radius: 5px;
}

.box2 {
  display: flex;
  flex-direction: column;
  background-color: #d7ecf4;
  padding: 5px;
  margin: 0px 0px 10px 0px;
  border-radius: 5px;
  max-width: 250px;
}

.box2_header {
  background-color: #d7ecf4;
  margin: 5px 0px 10px 0px;
  padding: 0px 5px 0px 5px;
  font-weight: bold;
  color: #44a1ca;
  text-transform: uppercase;
}

.box2_content {
  background-color: #ffffff;
  padding: 10px 0px;
  margin: 0px;
  border-radius: 5px;
}

#top_articles {
  margin: 0;
  list-style: none;
  border: 0;
  vertical-align: baseline;
  background: transparent;
  padding: 0px 10px;
  line-height: 1.6;
}

.top_articles_times {
  color: #5F5F5F;
  font-size: 85%;
  float: right !important;
}

.news_box {
  box-sizing: content-box;
  display: block;
  float: none;
  line-height: 19.2px;
  position: static;
  z-index: auto;
  margin: 0;
  min-height: 1px;
  border: 0;
  background: transparent;
  padding: 0;
}

.news_box dt {
  color: #739D13;
  display: block;
  float: left;
  width: 50px;
  font-weight: bold;
  text-align: center;
  line-height: 1.2;
  margin: 0;
  padding: 0;
}

.news_box dt span {
  font-size: 140%;
  margin: 0;
  padding: 0;
  color: #739D13;
  line-height: 19.2px;
}

.news_box dd {
  display: block;
  font-size: 85%;
  overflow: hidden;
  padding: 0px 5px 0px 0px;
}

.news_box dd span {
  color: #5F5F5F;
  border: 0;
  vertical-align: baseline;
  background: transparent;
  margin: 0;
  padding: 0;
}

.box1_content .bg {
  border-top: 1px solid #D7F199;
  border-bottom: 1px solid #D7F199;
  background: #F1FADD;
  margin: 10px 0;
  padding: 10px 0;
}

.survey_box {
  padding: 0px 10px;
  line-height: 1.5;
}

#survey-submit {
  padding: .1em .1em;
  width: 100px;
  height: 22px;
  border: 0;
  color: #ffffff;
  text-decoration: none;
  user-select: none;
  background: #2F2F2F;
  margin: 0;
  text-align: center;
  border-radius: 5px;
}

.usefullinks {
  margin: 0;
  list-style: none;
  border: 0;
  padding: 0px 10px;
  line-height: 1.6;
}

.usefullinks span {
  padding: 0px 10px 0px 0px;
  float: left !important;
}

/*
 *  Footer
 */

footer {
  display: flex;
  max-width: 940px;
  margin: auto;
  color: #3fa5cd;
  font-size: 85%;
  padding: 20px 0px;
  background: url("../design/footer.gif") 0 0 repeat-x;
  background-color: #ffffff;
}

footer a {
  color: #3fa5cd;
}

footer a:hover {
  color: #3fa5cd;
  text-decoration: none;
}

/*
 *  Messages
 */


#msg-error {
  border-radius: 5px;
  background-color: #ffeaf4;
  border-color: #ff8ec4;
  border-width: 1px;
  border-style: solid;
  padding:10px 15px 15px 10px;
  position:relative;
  margin:10px 0 0 0;
}
#msg-info {
  border-radius: 5px;
  background-color: #f5fae5;
  border-color: #cee67e;
  border-width: 1px;
  border-style: solid;
  padding:10px 15px 15px 10px;
  position:relative;
  margin:10px 0 0 0;
}

/*
*  Tablet Styles (481px — 768px)
*/
@media (max-width: 960px) {

  .wrapper2 {
    margin: 0px 5px 0px 5px;
  }

  input {
    font-size:100%;
  }

  textarea {
    font-size:100%;
  }

  .label {
    color:#5F5F5F;
    font-weight: bold;
  }

  .common-label {
    text-align: left;
    color:#5F5F5F;
    font-weight: bold;
  }

  .common-input {
    width: 100%;
    height:27px;
  }

  .common-input-chck {
    height:27px;
  }

  .filter-container {
    display: block;
  }

  .textarea-internal-note {
    width: 100%;
  }

  /* Tray */

  .menu {
    display: none;
    flex-direction: column;
    z-index: 1;
  }

  .menu.active {
    display: flex;
  }

  .menu-toggle {
    display: flex;
  }

  nav {
    flex-direction: row-reverse;
    justify-content: space-between;
    background-color: #000;
  }

  nav li {
    background: none;
    margin: 3px;
  }

  nav a {
    background: none;
  }

  /* Main */
  main {
      flex-direction: column;
  }

  .main-content {
    width: unset;
  }

  /* Article */

  .back_to_list {
    display: block;
  }

  /* Advert */

  /* Side menu */
  .side-menu {
    display: none;
    width: 100%;
  }

  .side-menu.active {
    display: flex;
  }

  #search-submit {
    left: 215px;
    width: 80px;
  }

  #login-input, #password-input {
    width: 150px;
  }

  /* Boxes */
  .boxes {
    margin: 10px auto;
  }

  .box1, .box2 {
    max-width: 400px;
  }
}

/*
 *  Mobile Styles (320px — 480px)
 */

@media (max-width: 800px) {

  /* Body */
  body {
    font-size: 100%;
  }

  /* Header */
  #company_name {
    font-size:120%;
  }

  .logo {
    display: none;
  }

  .hide-in-mobile {
    display: none;
  }
}

